--- a/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/language/de/views.view.files.yml
+++ b/sites/default/config_HX-CUMPMrYQ3R0nYtR-MwW-IaOI4xsnGia1zSfdaaa5OncPoDAbsfytNFaVDtQfEiNCJMHGzeg/sync/language/de/views.view.files.yml
@@ -71,7 +71,7 @@ display:
           label: Entitätstyp
         count:
           label: 'Anzahl der Verwendung'
-          format_plural_string: !!binary MQNAY291bnQ=
+          format_plural_string: "1\x03@count"
       arguments:
         fid:
           exception:
